--- a/app/src/main/res/values-it/translate_arrays.xml
+++ b/app/src/main/res/values-it/translate_arrays.xml
@@ -36,12 +36,12 @@
         <item>Dormire</item>
     </string-array>
     <string-array name="mainMenuNameArr">
-        <item>BFF</item>
+        <!--<item>BFF</item>-->
         <item>MESSAGGI</item>
         <item>CHAT DI GRUPPO</item>
-        <item>TRANSLATE</item>
+        <!--<item>TRANSLATE</item>
         <item>TORNA A CASA</item>
-        <item>WHERE AM I</item>
+        <item>WHERE AM I</item>-->
         <item>CONTAPASSI</item>
         <!--<item>ZANZARE</item>-->
         <item>IMPOSTAZIONI</item>
