--- a/app/src/main/res/values-ja/translate_arrays.xml
+++ b/app/src/main/res/values-ja/translate_arrays.xml
@@ -40,12 +40,12 @@
     </string-array>
 
     <string-array name="mainMenuNameArr">
-        <item>しんゆう</item>
+        <!--<item>しんゆう</item>-->
         <item>メッセージ</item>
         <item>グループチャット</item>
-        <item>TRANSLATE</item>
+        <!--<item>TRANSLATE</item>
         <item>おうちへかえろう</item>
-        <item>WHERE AM I</item>
+        <item>WHERE AM I</item>-->
         <item>うんどう</item>
         <!--<item>MOSQUITO（か）</item>-->
         <item>せってい</item>
