--- a/app/src/main/res/values-zh/translate_arrays.xml
+++ b/app/src/main/res/values-zh/translate_arrays.xml
@@ -40,12 +40,12 @@
     </string-array>
 
     <string-array name="mainMenuNameArr">
-        <item>BFF</item>
+        <!--<item>BFF</item>-->
         <item>信息</item>
         <item>集團聊天</item>
-        <item>帶我回家</item>
+        <!--<item>帶我回家</item>
         <item>翻譯</item>
-        <item>WHERE AM I</item>
+        <item>WHERE AM I</item>-->
         <item>運動</item>
         <!--<item>蚊子</item>-->
         <item>設置</item>
