--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -15,12 +15,12 @@
 
     <!-- Default All Resource not for change-->
     <integer-array name="mainMenuBackgroundArr">
-        <item>@color/waffle_bff_bg_color</item>
+        <!--<item>@color/waffle_bff_bg_color</item>-->
         <item>@color/waffle_message_bg_color</item>
         <item>@color/waffle_group_chat_bg_color</item>
-        <item>@color/waffle_translate_bg_color</item>
-        <item>@color/waffle_take_me_home_bg_color</item>
-        <item>@color/waffle_translate_bg_color</item>
+        <!--<item>@color/waffle_translate_bg_color</item>-->
+        <!--<item>@color/waffle_take_me_home_bg_color</item>-->
+        <!--<item>@color/waffle_translate_bg_color</item>-->
         <item>@color/waffle_blue_02_color</item>
         <!--<item>@color/waffle_yellow_03_color</item>-->
         <item>@color/waffle_orange_01_color</item>
@@ -42,12 +42,12 @@
     </integer-array>
 
     <integer-array name="mainMenuDrawableArr">
-        <item>@drawable/menu_bff</item>
+        <!--<item>@drawable/menu_bff</item>-->
         <item>@drawable/menu_message</item>
         <item>@drawable/menu_group_chat</item>
-        <item>@drawable/menu_translate</item>
+        <!--<item>@drawable/menu_translate</item>
         <item>@drawable/menu_take_me_home</item>
-        <item>@drawable/menu_where_am_i</item>
+        <item>@drawable/menu_where_am_i</item>-->
         <item>@drawable/menu_fitness</item>
         <!--<item>@drawable/menu_mosquito</item>-->
         <item>@drawable/menu_setting</item>
@@ -55,24 +55,24 @@
     </integer-array>
 
     <string-array name="mainMenuPackageArr" translatable="false">
-        <item>com.pomohouse.bff</item>
+        <!--<item>com.pomohouse.bff</item>-->
         <item>com.pomohouse.message</item>
         <item>com.pomohouse.groupchat</item>
-        <item>com.pomohouse.translate</item>
+        <!--<item>com.pomohouse.translate</item>
         <item>com.pomohouse.takemehome</item>
-        <item>com.pomohouse.whereami</item>
+        <item>com.pomohouse.whereami</item>-->
         <item>com.pomohouse.launcher.activity.fitness.FitnessActivity</item>
         <item>com.pomohouse.launcher.activity.settings.SettingActivity</item>
         <!--<item>com.pomohouse.mosquitorepellent</item>-->
     </string-array>
 
     <integer-array name="mainMenuActionArr">
+        <!--<item>0</item>-->
         <item>0</item>
         <item>0</item>
+        <!--<item>0</item>
         <item>0</item>
-        <item>0</item>
-        <item>0</item>
-        <item>0</item>
+        <item>0</item>-->
         <item>1</item>
         <item>1</item>
         <!--<item>2</item>-->
