--- a/app/src/main/res/values-ru/translate_arrays.xml
+++ b/app/src/main/res/values-ru/translate_arrays.xml
@@ -40,12 +40,12 @@
     </string-array>
 
     <string-array name="mainMenuNameArr">
-        <item>ДРУЗЬЯ НАВСЕГДА</item>
+        <!--<item>ДРУЗЬЯ НАВСЕГДА</item>-->
         <item>СООБЩЕНИЕ</item>
         <item>ГРУППОВОЙ ЧАТ</item>
-        <item>ПУТЬ ДОМОЙ</item>
+        <!--<item>ПУТЬ ДОМОЙ</item>
         <item>Переведите</item>
-        <item>WHERE AM I</item>
+        <item>WHERE AM I</item>-->
         <item>ФИТНЕС</item>
         <!--<item>АНТИ КОМАР</item>-->
         <item>УСТАНВКИ</item>
