--- a/app/src/main/res/values/translate_arrays.xml
+++ b/app/src/main/res/values/translate_arrays.xml
@@ -53,7 +53,7 @@
     </string-array>
 
     <string-array name="settingMenuNameArr">
-        <item>Pair Watch</item>
+        <item>Watch Info</item>
         <item>Brightness</item>
         <item>Volume</item>
         <item>My Watch</item>
