Show additional menu

--- a/app/src/main/res/values-de/translate_arrays.xml
+++ b/app/src/main/res/values-de/translate_arrays.xml
@@ -42,9 +42,9 @@
         <!--<item>BFFI</item>-->
         <item>NACHRICHT</item>
         <item>GRUPPENCHAT</item>
-        <!--<item>TRANSLATE</item>
+        <!--<item>TRANSLATE</item>-->
         <item>ZUHAUSE</item>
-        <item>WHEREAMI</item>-->
+        <!--<item>WHEREAMI</item>-->
         <item>FITNESS</item>
         <!--<item>MOSKITO</item>-->
         <item>EINSTELLUNGEN</item>
