--- a/app/src/main/res/values-es/translate_arrays.xml
+++ b/app/src/main/res/values-es/translate_arrays.xml
@@ -45,8 +45,9 @@
         <!--<item>AMIGOS</item>-->
         <item>MENSAJE</item>
         <item>GRUPO CHAT</item>
-        <!--<item>TRANSLATE</item>
-        <item>LLEVAME A CASA</item>-->
+        <!--<item>TRANSLATE</item>-->
+        <item>LLEVAME A CASA</item>
+        <!--<item>xxxxxx</item>-->
         <item>PODÓMETRO</item>
         <!--<item>MOSQUITOS</item>-->
         <item>AJUSTES</item>
