--- a/app/src/main/res/values-it/translate_arrays.xml
+++ b/app/src/main/res/values-it/translate_arrays.xml
@@ -39,9 +39,9 @@
         <!--<item>BFF</item>-->
         <item>MESSAGGI</item>
         <item>CHAT DI GRUPPO</item>
-        <!--<item>TRANSLATE</item>
+        <!--<item>TRANSLATE</item>-->
         <item>TORNA A CASA</item>
-        <item>WHERE AM I</item>-->
+        <!--<item>WHERE AM I</item>-->
         <item>CONTAPASSI</item>
         <!--<item>ZANZARE</item>-->
         <item>IMPOSTAZIONI</item>
