--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -19,7 +19,7 @@
         <item>@color/waffle_message_bg_color</item>
         <item>@color/waffle_group_chat_bg_color</item>
         <!--<item>@color/waffle_translate_bg_color</item>-->
-        <!--<item>@color/waffle_take_me_home_bg_color</item>-->
+        <item>@color/waffle_take_me_home_bg_color</item>
         <!--<item>@color/waffle_translate_bg_color</item>-->
         <item>@color/waffle_blue_02_color</item>
         <!--<item>@color/waffle_yellow_03_color</item>-->
@@ -45,9 +45,9 @@
         <!--<item>@drawable/menu_bff</item>-->
         <item>@drawable/menu_message</item>
         <item>@drawable/menu_group_chat</item>
-        <!--<item>@drawable/menu_translate</item>
+        <!--<item>@drawable/menu_translate</item>-->
         <item>@drawable/menu_take_me_home</item>
-        <item>@drawable/menu_where_am_i</item>-->
+        <!--<item>@drawable/menu_where_am_i</item>-->
         <item>@drawable/menu_fitness</item>
         <!--<item>@drawable/menu_mosquito</item>-->
         <item>@drawable/menu_setting</item>
@@ -58,9 +58,9 @@
         <!--<item>com.pomohouse.bff</item>-->
         <item>com.pomohouse.message</item>
         <item>com.pomohouse.groupchat</item>
-        <!--<item>com.pomohouse.translate</item>
+        <!--<item>com.pomohouse.translate</item>-->
         <item>com.pomohouse.takemehome</item>
-        <item>com.pomohouse.whereami</item>-->
+        <!--<item>com.pomohouse.whereami</item>-->
         <item>com.pomohouse.launcher.activity.fitness.FitnessActivity</item>
         <item>com.pomohouse.launcher.activity.settings.SettingActivity</item>
         <!--<item>com.pomohouse.mosquitorepellent</item>-->
@@ -70,9 +70,9 @@
         <!--<item>0</item>-->
         <item>0</item>
         <item>0</item>
-        <!--<item>0</item>
+        <!--<item>0</item>-->
         <item>0</item>
-        <item>0</item>-->
+        <!--<item>0</item>-->
         <item>1</item>
         <item>1</item>
         <!--<item>2</item>-->
