--- a/app/src/main/res/values/translate_arrays.xml
+++ b/app/src/main/res/values/translate_arrays.xml
@@ -43,9 +43,9 @@
         <!--<item>BFF</item>-->
         <item>MESSAGE</item>
         <item>GROUP CHAT</item>
-        <!--<item>TRANSLATE</item>
+        <!--<item>TRANSLATE</item>-->
         <item>TAKE ME HOME</item>
-        <item>WHERE AM I</item>-->
+        <!--<item>WHERE AM I</item>-->
         <item>FITNESS</item>
         <!-- <item>MOSQUITO</item>-->
         <item>SETTINGS</item>
