--- a/app/src/main/res/values-es/translate_arrays.xml
+++ b/app/src/main/res/values-es/translate_arrays.xml
@@ -44,7 +44,7 @@
         <!--<item>MEJORES AMIGOS</item>-->
         <!--<item>AMIGOS</item>-->
         <item>MENSAJE</item>
-        <item>GRUPO CHAT</item>
+        <!--<item>GRUPO CHAT</item>-->
         <!--<item>TRANSLATE</item>-->
         <item>LLEVAME A CASA</item>
         <!--<item>xxxxxx</item>-->
