--- a/app/src/main/res/values-ja/translate_arrays.xml
+++ b/app/src/main/res/values-ja/translate_arrays.xml
@@ -42,7 +42,7 @@
     <string-array name="mainMenuNameArr">
         <!--<item>しんゆう</item>-->
         <item>メッセージ</item>
-        <item>グループチャット</item>
+        <!--<item>グループチャット</item>-->
         <!--<item>TRANSLATE</item>-->
         <item>おうちへかえろう</item>
         <!--<item>WHERE AM I</item>-->
