--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -17,7 +17,7 @@
     <integer-array name="mainMenuBackgroundArr">
         <!--<item>@color/waffle_bff_bg_color</item>-->
         <item>@color/waffle_message_bg_color</item>
-        <item>@color/waffle_group_chat_bg_color</item>
+        <!--<item>@color/waffle_group_chat_bg_color</item>-->
         <!--<item>@color/waffle_translate_bg_color</item>-->
         <item>@color/waffle_take_me_home_bg_color</item>
         <!--<item>@color/waffle_translate_bg_color</item>-->
@@ -44,7 +44,7 @@
     <integer-array name="mainMenuDrawableArr">
         <!--<item>@drawable/menu_bff</item>-->
         <item>@drawable/menu_message</item>
-        <item>@drawable/menu_group_chat</item>
+        <!--<item>@drawable/menu_group_chat</item>-->
         <!--<item>@drawable/menu_translate</item>-->
         <item>@drawable/menu_take_me_home</item>
         <!--<item>@drawable/menu_where_am_i</item>-->
@@ -57,7 +57,7 @@
     <string-array name="mainMenuPackageArr" translatable="false">
         <!--<item>com.pomohouse.bff</item>-->
         <item>com.pomohouse.message</item>
-        <item>com.pomohouse.groupchat</item>
+        <!--<item>com.pomohouse.groupchat</item>-->
         <!--<item>com.pomohouse.translate</item>-->
         <item>com.pomohouse.takemehome</item>
         <!--<item>com.pomohouse.whereami</item>-->
@@ -69,7 +69,7 @@
     <integer-array name="mainMenuActionArr">
         <!--<item>0</item>-->
         <item>0</item>
-        <item>0</item>
+        <!--<item>0</item>-->
         <!--<item>0</item>-->
         <item>0</item>
         <!--<item>0</item>-->
